Added new view: (How to play)

--- a/WowLatinos/Views/Home/Index.cshtml
+++ b/WowLatinos/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
 
     <!-- REVOLUTION SLIDER -->
-    <div class="fullscreenbanner-container">
+    <div class="fullscreenbanner-container" style="margin-top:-35px;">
         <div class="fullscreenbanner ken-burns">
             <ul>
 
