--- a/WowLatinos/Views/Shared/_Layout.cshtml
+++ b/WowLatinos/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                 }
                 else
                 {
-                    <a id="quick_sign_in" href="#" data-toggle="dropdown"><i class="fa fa-sign-in"></i><span class="hidden-xs"> Iniciar Sesión</span></a>
+                    <a id="quick_sign_in" href="#" data-toggle="dropdown"><i class="fa fa-sign-in"></i><span class="hidden-xs"> Iniciar Sesión/Registrarse</span></a>
                 }
           
                 <div class="dropdown-menu" role="menu" aria-labelledby="quick_sign_in">
@@ -219,14 +219,15 @@
                             </a>
                         </li>
                         <li class="dropdown mega-menu-item mega-menu-two-columns">
-                            <a class="dropdown-toggle" href="#">
+                            <a class="dropdown-toggle" href="/Home/HowToPlay">
                                 ¿Cómo jugar?
                             </a>
                         </li>
-                        <li class="dropdown">
+                        <li class="dropdown">                          
                             <a class="dropdown-toggle" href="#">
                                 <strong>Noticias</strong> <i class="fa fa-angle-down"></i>
-                            </a>
+                                <span class="badge pull-right" style="font-size:10px">Migraciones</span>
+                            </a>                          
                             <ul class="dropdown-menu">
                                 <li><a href="#"><i class="fa fa-dashboard"></i>Últimos cambios (Servidor)</a></li>
                                 <li><a href="#"><i class="fa fa-newspaper-o"></i>Página</a></li>
@@ -292,9 +293,16 @@
             <!-- copyright , scrollTo Top -->
             <div class="footer-bar">
                 <div class="container">
-                    <span class="copyright">Copyright &copy; SOFT-K@NT, All Rights Reserved.</span>
-                    <a class="toTop" href="#topNav">IR ARRIBA<i class="fa fa-arrow-circle-up"></i></a>
+                    <span class="copyright social">  Redes Sociales
+                    <i class="fa fa-twitter fsize20"></i>
+                    <i class="fa fa-google-plus fsize20"></i>
+                    <i class="fa fa-whatsapp fsize20"></i>
+                    <i class="fa fa-youtube fsize20"></i></span>
+                    
+                    <span class="toTop">Copyright &copy; SOFT-K@NT, All Rights Reserved.</span>
+                   
                 </div>
+               
             </div>
             <!-- copyright , scrollTo Top -->
             <!-- footer content -->
@@ -302,38 +310,28 @@
                 <div class="container">
 
                     <div class="row">
+
+
+                        <div class="column col-md-4 text-center">
+                            <br />
+                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fextintoresuniversales%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1467256803348585" width="340" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+                        </div>
+                        <!-- /FOOTER CONTACT INFO -->
+
+
+                        <!-- FOOTER LATEST POSTS -->
+                        <div class="column  col-md-4 text-center">
+                        </div>
+                       <!-- FOOTER CONTACT INFO -->
+
                         <!-- FOOTER LOGO -->
-                        <div class="column col-md-4">
+                        <div class="column col-md-4 text-center">
                             <br />
                             <div class="logo-content">
                                 <img class="animate_fade_in" src="~/images/logo_abajo.png" height="280" width="350" alt="" />
                             </div>
                         </div>
                         <!-- /FOOTER LOGO -->
-
-                        <!-- FOOTER LATEST POSTS -->
-                        <div class="column  col-md-4 text-center">
-
-                        
-
-                    </div>
-                       <!-- FOOTER CONTACT INFO -->
-
-                        <div class="column col-md-4 text-center">     
-                            <br />
-                            <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fextintoresuniversales%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=1467256803348585" width="340" height="300" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-                               
-                                <div class="social">
-                                    <i class="fa fa-twitter fsize20"></i>
-                                    <i class="fa fa-google-plus fsize20"></i>
-                                    <i class="fa fa-whatsapp fsize20"></i>
-                                    <i class="fa fa-youtube fsize20"></i>
-
-                                </div>
-
-                        </div>
-                        <!-- /FOOTER CONTACT INFO -->
-
 
 
                 </div>
