Added Views: (Downloadsand Addons)

--- a/WowLatinos/Views/Shared/_Layout.cshtml
+++ b/WowLatinos/Views/Shared/_Layout.cshtml
@@ -295,9 +295,9 @@
                                 <strong>Descargas</strong> <i class="fa fa-angle-down"></i>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="#"><i class="fa fa-download"></i> Descargar el juego</a></li>
+                                <li><a href="/Downloads/Game"><i class="fa fa-download"></i> Descargar el juego</a></li>
                                 <li class="divider"></li>
-                                <li><a href="#"><i class="fa fa-check-square-o"></i> Descargar addons</a></li>
+                                <li><a href="/Downloads/Addons"><i class="fa fa-check-square-o"></i> Descargar addons</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
