--- a/WowLatinos/Views/Account/Register.cshtml
+++ b/WowLatinos/Views/Account/Register.cshtml
@@ -1,32 +1,22 @@
 ﻿@model WowLatinos.Models.BD.Account
 
-
-    <!-- WRAPPER -->
     <div id="wrapper">
 
-        <!-- PAGE TITLE -->
         <header id="page-title">
             <div class="container">
                 <h1>Registro</h1>
-
                 <ul class="breadcrumb">
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                     <li class="active">Página de registro</li>
                 </ul>
             </div>
         </header>
 
         <section class="container">
-
             <div class="row">
-
-                <!-- REGISTER -->
                 <div class="col-md-6">
-
                     <h2>Crear <strong>Cuenta</strong></h2>
-
                     <form class="white-row" role="form" method="post" ActionName="Register">
-
                         <div class="row">
                             <div class="form-group">
                                 <div class="col-md-6">
@@ -88,19 +78,12 @@
                                 <input type="submit" value="Registrar" class="btn btn-primary pull-right push-bottom" data-loading-text="Loading...">
                             </div>
                         </div>
-
                     </form>
-
                 </div>
-                <!-- /REGISTER -->
-                <!-- WHY? -->
                 <div class="col-md-6">
                     <br /> <br /><br />
-
                     <div class="white-row">
-
                         <h4>Regístrate con nosotros</h4>
-
                         <p>Nuestro server incluye opciones como:</p>
                         <ul class="list-icon check">
                             <li>Buy, sell, and interact with other members.</li>
@@ -109,21 +92,15 @@
                             <li>View your Atropos information from any computer in the world.</li>
                             <li>Connect with the Atropos community.</li>
                         </ul>
-
                         <hr class="half-margins" />
-
                         <p>
                             ¿Ya tienes una cuenta?
-                            <a href="page-signin.html"><strong>Inicia sesión</strong></a>
+                            <a  id="quick_sign_in" href="#" data-toggle="dropdown" href="#"><strong>Inicia sesión</strong></a>
                         </p>
                     </div>
 
                 </div>
-                <!-- /WHY? -->
-
             </div>
 
         </section>
-
     </div>
-    <!-- /WRAPPER -->
