--- a/WowLatinos/wwwroot/css/theme_css_dark.css
+++ b/WowLatinos/wwwroot/css/theme_css_dark.css
@@ -1633,7 +1633,7 @@ div.featured-box.nobg.border-only i.fa {
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
-    background-color: #304464; /* Set a background color */
+    background-color: transparent; /* Set a background color */
     color: white; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 5px; /* Some padding */
@@ -1641,7 +1641,7 @@ div.featured-box.nobg.border-only i.fa {
 }
 
     #myBtn:hover {
-        background-color: #555; /* Add a dark-grey background on hover */
+        background-color: lightgray; /* Add a dark-grey background on hover */
     }
 
 
